--- a/Python/객체지향_기본.md
+++ b/Python/객체지향_기본.md
@@ -125,9 +125,10 @@ print(java.user) # 홍길동
 - **생성자 메서드:** 인스턴스 객체가 생성될 때 자동으로 호출되는 메서드이다. 그래서 인스턴스 속성(변수)을 정의할 때 사용된다. 
 
   - 그래서 인스턴스 속성(변수)은 인스턴스 객체가 생성될때 생성된다. 
+  - 변수를 만들 때 초기 값을 설정하는 것 처럼 인스턴스를 생성할 때 그 초기 값을 설정 하는 것이다. 
   - 생성자 메서드에서 정의하는 변수는 매개변수와 유사하다. (그래서 기본인자를 사용할 수 있다. ) 
   - 기본형: `def __init__(self, 변수이름) `
-
+  
   ```python
   class ProgrammingLanguage:
   
