--- a/Python/객체지향_기본_2.md
+++ b/Python/객체지향_기본_2.md
@@ -224,3 +224,42 @@ print(ChickenWing.mro()) # [<class '__main__.ChickenWing'>, <class '__main__.Chi
 
 ## getter메서드와 setter메서드
 
+### 접근 제어자
+
+- public: 일반적인 클래스로 외부로부터 **모든 접근**이 가능하다. 
+- protected: `_ 메사드` 혹은 `_속성`으로 **자기클래스 혹은 자식클래스**에서만 접근이 가능하다.(하지만 강제성은 없다.)
+- private: `__메서드` 혹은 `__속성`으로 **자기클래스**에서만 접근이 가능하다. 
+
+```python
+class Food: #부모클래스
+    
+    def __init__(self, name, price):
+        self.__name = name
+        self.price = price
+        
+    def evaluate(self, taste):
+        return f'{taste}'
+
+    def my_name(self):
+        return self.__name
+        
+class Chicken(Food): #자식 클래스
+    pass
+
+        
+pizza = Food('파인애플피자', 20000) # 접근이 불가능하다고 pizza = Food(20000)로는 생성이 불가능하다. 
+bhc = Chicken('뿌링클', 18000) 
+
+print(pizza.name) # 클래스 외부이기 때문에 접근이 불가능하다. 
+print(bhc.name) # 클래스 외부이기 때문에 접근이 불가능하다. 
+
+print(pizza.my_name()) # 파인애플피자 // 이렇게는 접근할 수 있다.
+print(bhc.my_name()) # 뿌링클 // 이렇게는 접근할 수 있다.
+```
+
+<br>
+
+### getter메서드와 setter메서드
+
+
+
