--- a/Python/예외_처리.md
+++ b/Python/예외_처리.md
@@ -44,7 +44,7 @@ print('나눗셈 프로그램을 종료합니다.')
 
 <br>
 
-### try~except~[else]~[finally]
+### try~except
 
 - try : 예외가 발생할 것으로 예상되는 코드를 입력한다. 
 - except: 예외가 발생했을 때 예외 상황을 처리하기 위해 실행되는 코드를 입력한다.
