name mangling 추가

--- a/Python/객체지향_기본_2.md
+++ b/Python/객체지향_기본_2.md
@@ -222,13 +222,15 @@ print(ChickenWing.mro()) # [<class '__main__.ChickenWing'>, <class '__main__.Chi
 
 <br>
 
-## getter메서드와 setter메서드
+## 접근제어자
 
-### 접근 제어자
+> 클래스를 선언할때 정보 은닉을 위해 사용하는 것으로 파이썬은 다른 언어와 달리 실제로 접근을 막는 것은 아니다.
 
 - public: 일반적인 클래스로 외부로부터 **모든 접근**이 가능하다. 
 - protected: `_ 메사드` 혹은 `_속성`으로 **자기클래스 혹은 자식클래스**에서만 접근이 가능하다.(하지만 강제성은 없다.)
-- private: `__메서드` 혹은 `__속성`으로 **자기클래스**에서만 접근이 가능하다. 
+- private: `__메서드` 혹은 `__속성`으로 **자기클래스**에서만 접근이 가능하다. 외부에서 접근 시 `Attribute Error`가 발생한다. 
+
+<br>
 
 ```python
 class Food: #부모클래스
@@ -252,6 +254,8 @@ bhc = Chicken('뿌링클', 18000)
 
 print(pizza.name) # 클래스 외부이기 때문에 접근이 불가능하다. 
 print(bhc.name) # 클래스 외부이기 때문에 접근이 불가능하다. 
+print(pizza.price) # 20000
+print(bhc.price) # 18000
 
 print(pizza.my_name()) # 파인애플피자 // 이렇게는 접근할 수 있다.
 print(bhc.my_name()) # 뿌링클 // 이렇게는 접근할 수 있다.
@@ -259,7 +263,264 @@ print(bhc.my_name()) # 뿌링클 // 이렇게는 접근할 수 있다.
 
 <br>
 
-### getter메서드와 setter메서드
+```python
+class Food: #부모클래스
+    
+    def __init__(self, name, price):
+        self.__name = name
+        self.price = price
+        
+    def evaluate(self, taste):
+        return f'{taste}'
+
+    def my_name(self):
+        return self.__name
+        
+class Chicken(Food): #자식 클래스
+    pass
+        
+pizza = Food('파인애플피자', 20000)
+bhc = Chicken('뿌링클', 18000) 
+
+print(pizza.__dict__ ,bhc.__dict__)  # {'_Food__name': '파인애플피자', 'price': 20000} {'_Food__name': '뿌링클', 'price': 18000}
+
+print(pizza._Food__name) # 파인애플피자
+print(bhc._Food__name) # 뿌링클
+```
+
+- `__dict__`함수를 사용해서 본 결과,  private를 사용할 경우,  `_인스턴스__속성`의 형태로 저장되어 있는 것을 확인할 수 있다.
+- 즉, 정말 접근을 완전하게 불가능하게 하는 개념보다는 `name mangling`을 하는 것이다. (본인 이름으로 접근할 수 없음. )
+
+<br>
+
+### mangling
+
+> magling: 짓이기다. 
+>
+> 즉, 변수(속성)나 함수(메서드)의 이름을 짓이겨서 이름을 바꿔버리는 것을 의미한다. 
+
+<br>
+
+> Use the function naming rules: lowercase with words separated by underscores as necessary to improve readability.
+>
+> Use one leading underscore only for non-public methods and instance variables.
+>
+> To avoid name clashes with subclasses, use two leading underscores to invoke Python's name mangling rules.
+>
+> Python mangles these names with the class name: if class Foo has an attribute named `__a`, it cannot be accessed by `Foo.__a`. (An insistent user could still gain access by calling `Foo._Foo__a`.) Generally, double leading underscores should be used only to avoid name conflicts with attributes in classes designed to be subclassed.
+>
+> Note: there is some controversy about the use of __names (see below).
+>
+>  출처: PEP 8 -- Style Guide for Python Code
+
+`요약`  
+
+1. 공용이 아닌 메서드와 인스턴스 변수(속성)에 `_`를 사용해라.
+2. 하위클래스와의 이름 충돌을 막기 위해 `__`를 사용하여 파이썬 맹글링 규칙을 호출해라.
+3. 일반적으로 `__`은 오직 하위 클래스와의 이름 출동을 방지하기 위해서만 사용해야 한다. 
+
+ <br>
+
+magling 사용 목적은 다음과 같다. 
+
+1. **클래스 속성을 외부에서 접근하는 것을 막기 위해 (Private화)**
+
+   - 앞서말했던 접근제어자로 활용되는 것을 말하며, 완벽하게 보호되지 않는다. 
+   - 결국, 이름을 변경한 것이기 때문에 변경된 이름을 통해 접근할 수 있다. 
+   - **스타일가이드에서 언급되었듯이 이런용도로 magling을 사용하는 것은 지양하는 것이 좋다.** 
+   - 밖에서 접근하지 말라는 의미의 접근제어자는 `_`로도 충분하다.  (캡슐화를 위해서는 `_`를 사용하자.)
+
+   ```python
+   # __를 사용하면 자식 클래스의 메서드 오버라이딩을 막을 수 있다. 
+   #자식 클래스에서 부모클래스의 속성 및 메소드에 대한 오버라이딩 할 수 없다.
+   class Food: 
+       
+       def __init__(self, name, price, rank):
+           self.name = name
+           self.price = price
+           self.__rank = rank   # rank속성을 맹글링을 함으로서 하위 클래스에서 접근 불가능하다.  
+           
+   class Chicken(Food): 
+       pass
+       
+   pizza = Food('파인애플피자', 20000, 1) 
+   bhc = Chicken('뿌링클', 18000, 1) 
+   
+   print(pizza._Food__rank) # 1
+   print(bhc._Food__rank) # 1
+   
+   print(pizza.rank) # AttributeError: 'Food' object has no attribute 'rank'
+   print(bhc.rank) # AttributeError: 'Chicken' object has no attribute 'rank'
+   ```
+
+   <br>
+
+2. **하위 클래스가 상위 클래스의 속성을 오버라이딩 하는 것을 차단 ** 
+
+   ````python
+   #일반적으로는 자식 클래스에서 부모클래스의 속성 및 메소드에 대한 오버라이딩 할 수 있다. 
+   class Food: #부모클래스
+       
+       def __init__(self, name, price, rank):
+           self.name = name
+           self.price = price
+           self.rank = rank
+       
+       def ranking(self):
+           return f'축하합니다! {self.rank}등 음식입니다!'
+           
+   class Chicken(Food): #자식 클래
+       
+       def ranking(self): 
+           return f'축하합니다! {self.rank}등 치킨입니다!'
+      
+       
+   pizza = Food('파인애플피자', 20000, 1)
+   bhc = Chicken('뿌링클', 18000, 1)
+    
+   print(pizza.ranking()) # 축하합니다! 1등 음식입니다!
+   print(bhc.ranking()) # 축하합니다! 1등 치킨입니다!
+   ````
+
+   ```python
+   # __를 사용하면 자식 클래스의 메서드 오버라이딩을 막을 수 있다. 
+   #자식 클래스에서 부모클래스의 속성 및 메소드에 대한 오버라이딩 할 수 없다.
+   class Food: 
+       
+       def __init__(self, name, price, rank):
+           self.name = name
+           self.price = price
+           self.__rank = rank   # rank속성을 맹글링을 함으로서 하위 클래스에서 접근 불가능하다.  
+           
+       def ranking(self):
+           return f'축하합니다! {self.__rank}등 음식입니다!'   
+           
+   class Chicken(Food): 
+       
+       def ranking(self): 
+           return f'축하합니다! {self.__rank}등 치킨입니다!' #아예 __rank속성을 가지지 않는 것으로 취급한다. 
+       
+   pizza = Food('파인애플피자', 20000, 1) 
+   bhc = Chicken('뿌링클', 18000, 1) 
+   
+   print(pizza.ranking()) # 축하합니다! 1등 음식입니다!
+   print(bhc.ranking()) # AttributeError: 'Chicken' object has no attribute '_Chicken__rank
+   ```
+
+   <br>
+
+3. **메서드오버라이딩으로 인한 이름 충돌 방지**
+
+   - **mangling을 사용하는 주 목적이다. ** 
+
+   - 계속 오버라이드가 될 메서드라는 의미로 다른 메서드와의 이름과 충돌 되지 않기 위해 magling하는 것이다. 
+
+   ```python
+   class Food: #부모클래스    
+       def __init__(self, name, price, rank):
+           self.name = name
+           self.price = price
+           self.rank = rank
+           print(self.__evaluate()) # 부모 클래스의 evaluate와 자식클래스의 evaluate의 매개변수 갯수가 달라서 오류 발생  
+           
+       def evaluate(self, taste = 'Terrible'):
+           return f'이 음식은 {taste}!!'
+       
+       __evaluate = evaluate
+   
+           
+   class Chicken(Food): #자식 클래스
+       
+       def evaluate(self, taste, star): # 메서드 오버라이딩
+           return f'이 치킨은 {taste}!! 5점 만점에 {star}점!!'
+       
+   pizza = Food('파인애플피자', 20000, 1) # 이 음식은 Terrible!!
+   bhc = Chicken('뿌링클', 18000, 1) # 이 음식은 Terrible!!
+   
+   print(pizza.evaluate('BAD')) # BAD!!
+   print(bhc.evaluate('GOOD', 5))  # 이 치킨은 GOOD!! 5점 만점에 5점!!
+   
+   # dir()는 객체를 인자로 넣어주면 해당 객체가 갖고 있는 변수와 메서드를 나열한다. 
+   print(dir(pizza))
+   # ['_Food__evaluate', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'evaluate', 'name', 'price', 'rank']
+   
+   print(dir(bhc))
+   # ['_Food__evaluate', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'evaluate', 'name', 'price', 'rank']
+   
+   
+   #_Food__evaluate로 이름을 mangling함으로서 evaluate와 이름이 충돌되지 않도록 한다. 
+   ```
+
+<br>
+
+## getter메서드와 setter메서드
+
+>  접근제어자는 코드 유지보수 측면에서 필요하다. 모든 클래스를 public하게 만들면 중구난방으로 클래스를 사용하게 되어 연결된 객체들이 많아 진다. 
+>
+> 한 클래스를 수정하면 연결된 모든 객체에 영향을 미치게 되어 유지보수가 힘들기때문이다. 
+>
+> (public만 사용하게 된다면, 절차지향 프로그래밍에서 전역변수의 무분별한 활용으로 인해 발생했던 문제가 다시 반복된다.  => 객체지향을 할 의미가...🙄) 
+
+- 그럼에도 불구하고 접근제어자가 있는 속성에 접근해야 할 때도 존재한다.
+- 이를 위해서 사용하는 것이 getter 메서드와 setter 메서드이다.
+
+<br>
+
+- **getter 메서드**
+  - 해당 속성의 값을 읽기위해 사용하는 메서드 
+  - `@property`데코레이터 사용!
+- **setter 메서드** 
+  - 해당 속성의 값을 변경하기 위해 사용하는 메서드
+  - `@변수.setter`
+
+```python
+class Food: #부모클래스    
+    def __init__(self, name, price):
+        self.__name = name
+        self._price = price
+        if price >= 100000:
+            raise ValueError('너무 비쌉니다!')
+            
+pizza = Food('파인애플 피자', 20000)
+print(pizza._price)
+
+pizza._price = 100000000 # 20000 
+print(pizza._price) # 100000000 (__init__이 실행되지 않기때문에 오류가 발생하지 않는다..ㅠㅠ)
+```
+
+```python
+class Food: #부모클래스    
+    def __init__(self, name, price):
+        self.__name = name
+        self._price = price
+        if price >= 100000:
+            raise ValueError('너무 비쌉니다!')
+        
+    @property #getter 메서드 (속성의 값을 읽는다.)
+    def price(self):
+        return self._price
+    
+    @price.setter #setter 메서드 (해당 속성의 값을 지정한다.)
+    def price(self, new_price):
+        if new_price >= 100000:
+            raise ValueError('너무 비쌉니다!')
+            
+        self._price = new_price      
 
 
+#값을 읽을 때마다 그냥 속성명으로 접근이 가능하다!!
+pizza = Food('파인애플 피자', 20000)
+print(pizza.price) # 20000
 
+pizza.price = 10000
+print(pizza.price) # 10000
+
+pizza.price = 100000000 #  
+print(pizza._price) # ValueError: 너무 비쌉니다!
+
+
+print(dir(pizza))
+['_Food__name', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_price', 'price']
+```
+
+<br>
