--- a/Python/[객체지향]기본_1.md
+++ b/Python/[객체지향]기본_1.md
@@ -67,10 +67,10 @@ from unicodedata import name
 class ProgrammingLanguage:
     
     def __init__(self, difficulty,fun): # 인스턴스가 가지는 속성(변수)을 정의한다.(생성자 메서드를 활용해 인스턴스 속성을 정의한다.)
-        self.difficulty = difficulty   # 나중에 인스턴스를 생성할 때 자동으로 호출되는 메서드이다. 
-        self.fun = fun                # self.변수이름 형식으로 정의한다. 
+        self.difficulty = difficulty    # 나중에 인스턴스를 생성할 때 자동으로 호출되는 메서드이다. 
+        self.fun = fun                  # self.변수이름 형식으로 정의한다. 
         
-    def hello(self): #인스턴스가 사용할 수 있는 메서드 정의한다.(자동으로 인스턴스를 인자로 전달한다.)
+    def hello(self):                    #인스턴스가 사용할 수 있는 메서드 정의한다.(자동으로 인스턴스를 인자로 전달한다.)
         return print('Hello, World') 
         
     def introduce(self, name):
@@ -81,23 +81,23 @@ class ProgrammingLanguage:
     
     
 #인스턴스 생성(클래스 정의가 끝난 후에 클래스명을 호출함으로서 생성한다.)
-Ruby = ProgrammingLanguage(5, 5) # 파이썬이라는 인스턴스 생성
-java = ProgrammingLanguage(5, 5) #자바라는 인스턴스 생성
+Ruby = ProgrammingLanguage(5, 5)       # 파이썬이라는 인스턴스 생성
+java = ProgrammingLanguage(5, 5)       #자바라는 인스턴스 생성
 
 
 # 메서드를 실행한다. 
-Ruby.hello()  # Hello, World
-java.introduce('java') # 안녕, 나는 java 야
-java.difficult() # 안녕, 내 난이도는 5점 만점에 5점이야.
+Ruby.hello()                           # Hello, World
+java.introduce('java')                 # 안녕, 나는 java 야
+java.difficult()                       # 안녕, 내 난이도는 5점 만점에 5점이야.
 
 
 # 속성에 접근하여 반환한다. 
-print(Ruby.difficulty) # 5
-print(java.fun) # 5
+print(Ruby.difficulty)                 # 5
+print(java.fun)                        # 5
 
 # 인스턴스가 생성된 이후 외부에서 속성을 추가로 정의할 수도 있다. (외부에서 새로 정의하는 것은 지양하자!)
-java.user = '홍길동'  # Ruby 인스턴스는 접근할 수 없다. 
-print(java.user) # 홍길동
+java.user = '홍길동'                   # Ruby 인스턴스는 접근할 수 없다. 
+print(java.user)                      # 홍길동
 ```
 
 <br>
@@ -134,8 +134,8 @@ print(java.user) # 홍길동
   
       
   def __init__(self, difficulty,fun = 2): # 인스턴스가 가지는 속성을 정의한다.(생성자 메서드를 활용해 인스턴스 속성을 정의한다.)
-          self.difficulty = difficulty   # 나중에 인스턴스를 생성할 때 자동으로 호출되는 메서드이다. 
-          self.fun = fun                # self.변수이름 형식으로 정의한다. 
+          self.difficulty = difficulty    # 나중에 인스턴스를 생성할 때 자동으로 호출되는 메서드이다. 
+          self.fun = fun                  # self.변수이름 형식으로 정의한다. 
   ```
 
 <br>
@@ -174,9 +174,9 @@ print(java.user) # 홍길동
 
 ```python
 # 메서드를 실행한다. 
-Ruby.hello()  # Hello, World
-java.introduce('java') # 안녕, 나는 java 야
-java.difficult() # 안녕, 내 난이도는 5점 만점에 5점이야.
+Ruby.hello()                   # Hello, World
+java.introduce('java')         # 안녕, 나는 java 야
+java.difficult()               # 안녕, 내 난이도는 5점 만점에 5점이야.
 ```
 
 <br>
@@ -191,7 +191,7 @@ java.difficult() # 안녕, 내 난이도는 5점 만점에 5점이야.
 
 ```python
 class ProgrammingLanguage:
-    subject = 'Computer Science & Engineering' # 변수 = 데이터
+    subject = 'Computer Science & Engineering'     # 변수 = 데이터
 ```
 
 <br>
@@ -207,22 +207,26 @@ class ProgrammingLanguage:
 
   ```python
   class ProgrammingLanguage:
-      subject = 'Computer Science & Engineering' # 클래스 변수 
+      # 클래스 변수
+      subject = 'Computer Science & Engineering'                  
       
-      @classmethod # 인스턴스 ,클래스 전부 다 호출 가능한 메서드
+      # 클래스 메서드는 인스턴스 ,클래스 전부 다 호출 가능하다.
+      #클래스 메서드에서는 cls.변수명을 통해 클래스 변수에 접근
+      @classmethod                                                
       def print_subject(cls):
-          return print(f'{cls.subject}과의 수업니다.') #클래스 메서드에서는 cls.변수명을 통해 클래스 변수에 접근 
+          return print(f'{cls.subject}과의 수업니다.')               
   
+      # 인스턴스 메서드에서는 self.변수명을 통해 클래스 변수에 접근
       def print_subject_professor(self, name):
-          return print(f'{self.subject}의 교수님은 {name}입니다.') # 인스턴스 메서드에서는 self.변수명을 통해 클래스 변수에 접근
+          return print(f'{self.subject}의 교수님은 {name}입니다.')  
           
           
-  ProgrammingLanguage.print_subject() #Computer Science & Engineering과의 수업니다. 
+  ProgrammingLanguage.print_subject()    # Computer Science & Engineering과의 수업니다. 
   
   java = ProgrammingLanguage() 
-  java.print_subject() # Computer Science & Engineering과의 수업니다.
+  java.print_subject()                   # Computer Science & Engineering과의 수업니다.
   
-  java.subject = 'Math' # 인스턴스 속성 변경 (이제는 클래스 변수 데이터에 접근하지 않음 )
+  java.subject = 'Math'                  # 인스턴스 속성 변경 (이제는 클래스 변수 데이터에 접근하지 않음 )
   java.print_subject_professor('홍길동')  # Math의 교수님은 홍길동입니다.
   
   ```
@@ -241,7 +245,7 @@ class ProgrammingLanguage:
       
       @staticmethod
       def print_subject(name):
-          return print(f'{name}과목은 {ProgrammingLanguage.subject}이다.' ) # 클래스 변수에는 접근이 가능하다. (클래스명.변수명)
+          return print(f'{name}과목은 {ProgrammingLanguage.subject}이다.' ) 
       
       @staticmethod
       def count_subject(a, b):
@@ -250,8 +254,8 @@ class ProgrammingLanguage:
   
   java = ProgrammingLanguage() 
   
-  java.print_subject('java') # java과목은 Computer Science & Engineering이다.
-  ProgrammingLanguage.count_subject(1, 3) #  내가 듣는 Computer Science & Engineering관련 과목은 4개 이다.
+  java.print_subject('java')                 # java과목은 Computer Science & Engineering이다.
+  ProgrammingLanguage.count_subject(1, 3)    # 내가 듣는 Computer Science & Engineering관련 과목은 4개 이다.
      
   ```
 
