--- a/Python/[객체지향]기본_2.md
+++ b/Python/[객체지향]기본_2.md
@@ -7,7 +7,7 @@
 > 즉, 자식 클래스에서는 부모클래의 속성과 메서드를 따로 기입하지 않아도 접근 및 사용이 가능하다. (코드 재사용성이 좋아진다.)
 
 ```python
-class Food(): #부모클래스
+class Food():                          #부모클래스
     
     def __init__(self, name, price):
         self.name = name
@@ -16,14 +16,16 @@ class Food(): #부모클래스
     def evaluate(self, taste):
         return f'{taste}'
         
-class Chicken(Food): #자식 클래스
+class Chicken(Food):                  #자식 클래스
     pass
 
 pizza = Food('파인애플피자', 20000)
-bhc = Chicken('뿌링클', 18000) #bhc = Chicken()는 생성이 불가하다. 부모클래스에서 정의한 속성을 기입하지 않으면 자식클래스의 인스턴스 생성불가!
 
-print(pizza.evaluate('Bad')) # Bad
-print(bhc.evaluate('Good')) # Good 자동으로 부모클래스의 메서드를 사용 가능하다. 
+#bhc = Chicken()는 생성이 불가하다. 부모클래스에서 정의한 속성을 기입하지 않으면 자식클래스의 인스턴스 생성불가!
+bhc = Chicken('뿌링클', 18000) 
+
+print(pizza.evaluate('Bad'))         # Bad
+print(bhc.evaluate('Good'))          # Good // 자동으로 부모클래스의 메서드를 사용 가능하다. 
 
 print(bhc.price) # 18000 
 
@@ -36,7 +38,7 @@ print(bhc.price) # 18000
   `isinstance`의 매개변수 중 하나인  클래스는 인스턴스를 생성한 클래스, 인스턴스를 생성한 클래스의 부모클래스 모두 포함한다. 
 
 ```python
-class Food: #부모클래스
+class Food:                         
     
     def __init__(self, name, price):
         self.name = name
@@ -45,21 +47,21 @@ class Food: #부모클래스
     def evaluate(self, taste):
         return f'{taste}'
         
-class Chicken(Food): #자식 클래스
+class Chicken(Food): 
     pass
 
 
 pizza = Food('파인애플피자', 20000)
 bhc = Chicken('뿌링클', 18000)
 
-print(issubclass(Chicken, Food)) # True
-print(issubclass(bhc, chicken)) # 오류발생. 클래스가 아니다. 
-print(isinstance(bhc, Food)) # True 
+print(issubclass(Chicken, Food))         # True
+print(issubclass(bhc, Chicken))          # TypeError: issubclass() arg 1 must be a class
+print(isinstance(bhc, Food))             # True 
 
 ---
-print(issubclass(int,int)) # True
-print(issubclass(float,int)) # False
-print(issubclass(bool,int)) # True
+print(issubclass(int,int))               # True
+print(issubclass(float,int))             # False
+print(issubclass(bool,int))              # True
 ```
 
 <br>
@@ -71,25 +73,25 @@ print(issubclass(bool,int)) # True
 > 일반적으로 메서드의 이름은 같지만 기능을 약간 수정해야할 때 사용한다. 
 
 ```python
-class Food: #부모클래스
+class Food:                               # 부모 클래스
     
-    def __init__(self, name, price):
+    def __init__(self, name, price):      
         self.name = name
         self.price = price
         
     def evaluate(self, taste):
         return f'{taste}'
         
-class Chicken(Food): #자식 클래스
+class Chicken(Food):                     # 자식 클래스
     
-    def evaluate(self, taste): # 오버라이딩
+    def evaluate(self, taste):           # 메서드 오버라이딩 (이제 부모의 evaluate()메서드를 사용하지 못한다.) 
         return f'이 치킨은 {taste}~!'
     
 pizza = Food('파인애플피자', 20000)
 bhc = Chicken('뿌링클', 18000)
 
-print(pizza.evaluate('BAD')) # BAD 
-print(bhc.evaluate('GOOD')) # 이 치킨은 GOOD~! // 오버라이딩을 하면 이제 부모의 evaluate()메서드를 사용하지 못한다는 단점이 있다. 
+print(pizza.evaluate('BAD'))            # BAD 
+print(bhc.evaluate('GOOD'))             # 이 치킨은 GOOD~! 
 ```
 
 <br>
@@ -98,7 +100,7 @@ print(bhc.evaluate('GOOD')) # 이 치킨은 GOOD~! // 오버라이딩을 하면 
   자식 클래스에서 부모클래스의 메서드를 호출해서 사용할 수 있다. 
 
 ```python
-class Food: #부모클래스
+class Food:                                    #부모클래스
     
     def __init__(self, name, price):
         self.name = name
@@ -107,17 +109,18 @@ class Food: #부모클래스
     def evaluate(self, taste):
         return f'{taste}'
         
-class Chicken(Food): #자식 클래스
-    
+class Chicken(Food):                          #자식 클래스
+
+# 기존의 부모 메서드를 활용하면서 새로운 기능 추가. (부분 재정의)
     def evaluate(self, taste, star):
-        return super().evaluate(taste) + f'\n별점은 {star}점 입니다' # 기존의 부모 메서드를 활용하면서 새로운 기능 추가. (부분 재정의)
+        return super().evaluate(taste) + f'\n별점은 {star}점 입니다' 
        
     
 pizza = Food('파인애플피자', 20000)
 bhc = Chicken('뿌링클', 18000)
 
-print(pizza.evaluate('BAD'))  # BAD
-print(bhc.evaluate('GOOD', 5))  # GOOD \n 별점은 5점 입니다 
+print(pizza.evaluate('BAD'))                 # BAD
+print(bhc.evaluate('GOOD', 5))               # GOOD \n 별점은 5점 입니다 
 ```
 
 <br>
@@ -125,7 +128,7 @@ print(bhc.evaluate('GOOD', 5))  # GOOD \n 별점은 5점 입니다
 - 슈퍼함수 `super()`는 속성에서도 활용 가능하다. 
 
 ```python
-class Food: #부모클래스
+class Food:                                     #부모클래스
     
     def __init__(self, name, price):
         self.name = name
@@ -134,10 +137,10 @@ class Food: #부모클래스
     def evaluate(self, taste):
         return f'{taste}'
         
-class Chicken(Food): #자식 클래스
+class Chicken(Food):                          #자식 클래스
     
     def __init__(self, name, price, rank, phone):
-        super().__init__ (name, price) #super()로 부모클래스의 __init__메서드 호출
+        super().__init__ (name, price)        #super()로 부모클래스의 __init__메서드 호출
         self.rank = rank
         self.phone = phone
         
@@ -146,8 +149,8 @@ class Chicken(Food): #자식 클래스
 pizza = Food('파인애플피자', 20000)
 bhc = Chicken('뿌링클', 18000, 5, '02-123-456')
 
-print(bhc.rank) # 5
-print(bhc.price) # 18000
+print(bhc.rank)                              # 5
+print(bhc.price)                             # 18000
 ```
 
 <br>
@@ -157,7 +160,7 @@ print(bhc.price) # 18000
 > 여러 부모클래스로 부터 상속을 받는 자녀클래스를 만들 수 있다. 
 
 ```python
-class Chicken: #부모클래스 1
+class Chicken:                              #부모클래스 1
     brand = 'bhc'
     
     def __init__(self, name, price):
@@ -167,7 +170,7 @@ class Chicken: #부모클래스 1
     def evaluate(self, taste):
         return f'{taste}'
     
-class Pizza: # 부모클래스 2
+class Pizza:                               # 부모클래스 2
     brand = 'pizzahut'
     
     def __init__(self, name, price):
@@ -178,13 +181,13 @@ class Pizza: # 부모클래스 2
         return f'평점은 {star}점이다.'
     
 
-class ChickenWing(Chicken, Pizza):  #Chicken이 우선순위 부모클래스 이다.
+class ChickenWing(Chicken, Pizza):         #Chicken이 우선순위 부모클래스 이다.
     pass
 
 cw = ChickenWing('핫윙', 5000)
 
-print(cw.brand) # bhc // Chicken 클래스의 클래스 변수값을 따른다.
-print(cw.evaluate('GOOD')) # GOOD // Chicken 클래스의 메서드를 따른다.
+print(cw.brand)                           # bhc // Chicken 클래스의 클래스 변수값을 따른다.
+print(cw.evaluate('GOOD'))                # GOOD // Chicken 클래스의 메서드를 따른다.
 ```
 
 <br>
@@ -192,7 +195,7 @@ print(cw.evaluate('GOOD')) # GOOD // Chicken 클래스의 메서드를 따른다
 - 부모클래스를 탐색할 수 있는 함수 `mro()`
 
 ```python
-class Chicken: #부모클래스 1
+class Chicken:                           #부모클래스 1
     brand = 'bhc'
     
     def __init__(self, name, price):
@@ -202,7 +205,7 @@ class Chicken: #부모클래스 1
     def evaluate(self, taste):
         return f'{taste}'
     
-class Pizza: # 부모클래스 2
+class Pizza:                            # 부모클래스 2
     brand = 'pizzahut'
     
     def __init__(self, name, price):
@@ -213,11 +216,12 @@ class Pizza: # 부모클래스 2
         return f'평점은 {star}점이다.'
     
 
-class ChickenWing(Chicken, Pizza):  #Chicken이 우선순위 부모클래스 이다.
+class ChickenWing(Chicken, Pizza):     #Chicken이 우선순위 부모클래스 이다.
     pass
 
 
-print(ChickenWing.mro()) # [<class '__main__.ChickenWing'>, <class '__main__.Chicken'>, <class '__main__.Pizza'>, <class 'object'>]
+print(ChickenWing.mro()) 
+# [<class '__main__.ChickenWing'>, <class '__main__.Chicken'>, <class '__main__.Pizza'>, <class 'object'>]
 ```
 
 <br>
@@ -233,7 +237,7 @@ print(ChickenWing.mro()) # [<class '__main__.ChickenWing'>, <class '__main__.Chi
 <br>
 
 ```python
-class Food: #부모클래스
+class Food:                         #부모클래스
     
     def __init__(self, name, price):
         self.__name = name
@@ -245,26 +249,27 @@ class Food: #부모클래스
     def my_name(self):
         return self.__name
         
-class Chicken(Food): #자식 클래스
+class Chicken(Food):               #자식 클래스
     pass
 
-        
-pizza = Food('파인애플피자', 20000) # 접근이 불가능하다고 pizza = Food(20000)로는 생성이 불가능하다. 
+
+# 속성에 접근이 불가능하다고 해서  pizza = Food(20000)로는 생성이 불가능하다. 
+pizza = Food('파인애플피자', 20000) 
 bhc = Chicken('뿌링클', 18000) 
 
-print(pizza.name) # 클래스 외부이기 때문에 접근이 불가능하다. 
-print(bhc.name) # 클래스 외부이기 때문에 접근이 불가능하다. 
-print(pizza.price) # 20000
-print(bhc.price) # 18000
+print(pizza.name)                # 클래스 외부이기 때문에 접근이 불가능하다. 
+print(bhc.name)                  # 클래스 외부이기 때문에 접근이 불가능하다. 
+print(pizza.price)               # 20000
+print(bhc.price)                 # 18000
 
-print(pizza.my_name()) # 파인애플피자 // 이렇게는 접근할 수 있다.
-print(bhc.my_name()) # 뿌링클 // 이렇게는 접근할 수 있다.
+print(pizza.my_name())           # 파인애플피자 // 이렇게는 접근할 수 있다.
+print(bhc.my_name())             # 뿌링클 // 이렇게는 접근할 수 있다.
 ```
 
 <br>
 
 ```python
-class Food: #부모클래스
+class Food:                           #부모클래스
     
     def __init__(self, name, price):
         self.__name = name
@@ -276,19 +281,19 @@ class Food: #부모클래스
     def my_name(self):
         return self.__name
         
-class Chicken(Food): #자식 클래스
+class Chicken(Food):                 #자식 클래스
     pass
         
 pizza = Food('파인애플피자', 20000)
 bhc = Chicken('뿌링클', 18000) 
 
 print(pizza.__dict__ ,bhc.__dict__)  # {'_Food__name': '파인애플피자', 'price': 20000} {'_Food__name': '뿌링클', 'price': 18000}
-
-print(pizza._Food__name) # 파인애플피자
-print(bhc._Food__name) # 뿌링클
+ 
+print(pizza._Food__name)            # 파인애플피자
+print(bhc._Food__name)              # 뿌링클
 ```
 
-- `__dict__`함수를 사용해서 본 결과,  private를 사용할 경우,  `_인스턴스__속성`의 형태로 저장되어 있는 것을 확인할 수 있다.
+- `__dict__`함수를 사용해서 본 결과,  private를 사용할 경우,  `_클래스__속성`의 형태로 저장되어 있는 것을 확인할 수 있다.
 - 즉, 정말 접근을 완전하게 불가능하게 하는 개념보다는 `name mangling`을 하는 것이다. (본인 이름으로 접근할 수 없음. )
 
 <br>
@@ -339,7 +344,7 @@ magling 사용 목적은 다음과 같다.
        def __init__(self, name, price, rank):
            self.name = name
            self.price = price
-           self.__rank = rank   # rank속성을 맹글링을 함으로서 하위 클래스에서 접근 불가능하다.  
+           self.__rank = rank              # rank속성을 맹글링을 함으로서 하위 클래스에서 접근 불가능하다.  
            
    class Chicken(Food): 
        pass
@@ -347,11 +352,11 @@ magling 사용 목적은 다음과 같다.
    pizza = Food('파인애플피자', 20000, 1) 
    bhc = Chicken('뿌링클', 18000, 1) 
    
-   print(pizza._Food__rank) # 1
-   print(bhc._Food__rank) # 1
+   print(pizza._Food__rank)               # 1
+   print(bhc._Food__rank)                 # 1
    
-   print(pizza.rank) # AttributeError: 'Food' object has no attribute 'rank'
-   print(bhc.rank) # AttributeError: 'Chicken' object has no attribute 'rank'
+   print(pizza.rank)                      # AttributeError: 'Food' object has no attribute 'rank'
+   print(bhc.rank)                        # AttributeError: 'Chicken' object has no attribute 'rank'
    ```
 
    <br>
@@ -360,7 +365,7 @@ magling 사용 목적은 다음과 같다.
 
    ````python
    #일반적으로는 자식 클래스에서 부모클래스의 속성 및 메소드에 대한 오버라이딩 할 수 있다. 
-   class Food: #부모클래스
+   class Food:                       #부모클래스
        
        def __init__(self, name, price, rank):
            self.name = name
@@ -370,7 +375,7 @@ magling 사용 목적은 다음과 같다.
        def ranking(self):
            return f'축하합니다! {self.rank}등 음식입니다!'
            
-   class Chicken(Food): #자식 클래
+   class Chicken(Food):             #자식 클래스
        
        def ranking(self): 
            return f'축하합니다! {self.rank}등 치킨입니다!'
@@ -379,8 +384,8 @@ magling 사용 목적은 다음과 같다.
    pizza = Food('파인애플피자', 20000, 1)
    bhc = Chicken('뿌링클', 18000, 1)
     
-   print(pizza.ranking()) # 축하합니다! 1등 음식입니다!
-   print(bhc.ranking()) # 축하합니다! 1등 치킨입니다!
+   print(pizza.ranking())         # 축하합니다! 1등 음식입니다!
+   print(bhc.ranking())           # 축하합니다! 1등 치킨입니다!
    ````
 
    ```python
@@ -391,7 +396,7 @@ magling 사용 목적은 다음과 같다.
        def __init__(self, name, price, rank):
            self.name = name
            self.price = price
-           self.__rank = rank   # rank속성을 맹글링을 함으로서 하위 클래스에서 접근 불가능하다.  
+           self.__rank = rank       # rank속성을 맹글링을 함으로서 하위 클래스에서 접근 불가능하다.  
            
        def ranking(self):
            return f'축하합니다! {self.__rank}등 음식입니다!'   
@@ -399,13 +404,15 @@ magling 사용 목적은 다음과 같다.
    class Chicken(Food): 
        
        def ranking(self): 
-           return f'축하합니다! {self.__rank}등 치킨입니다!' #아예 __rank속성을 가지지 않는 것으로 취급한다. 
+           return f'축하합니다! {self.__rank}등 치킨입니다!' 
        
    pizza = Food('파인애플피자', 20000, 1) 
    bhc = Chicken('뿌링클', 18000, 1) 
    
-   print(pizza.ranking()) # 축하합니다! 1등 음식입니다!
-   print(bhc.ranking()) # AttributeError: 'Chicken' object has no attribute '_Chicken__rank
+   print(pizza.ranking())          # 축하합니다! 1등 음식입니다!
+   
+   #__rank속성을 가지지 않는 것으로 취급한다. 
+   print(bhc.ranking())            # AttributeError: 'Chicken' object has no attribute '_Chicken__rank
    ```
 
    <br>
@@ -417,12 +424,13 @@ magling 사용 목적은 다음과 같다.
    - 계속 오버라이드가 될 메서드라는 의미로 다른 메서드와의 이름과 충돌 되지 않기 위해 magling하는 것이다. 
 
    ```python
-   class Food: #부모클래스    
+   class Food:                               
        def __init__(self, name, price, rank):
            self.name = name
            self.price = price
            self.rank = rank
-           print(self.__evaluate()) # 부모 클래스의 evaluate와 자식클래스의 evaluate의 매개변수 갯수가 달라서 오류 발생  
+   # 던더가 없다면 부모 클래스의 evaluate와 자식클래스의 evaluate의 매개변수 갯수가 달라서 오류 발생
+           print(self.__evaluate())   
            
        def evaluate(self, taste = 'Terrible'):
            return f'이 음식은 {taste}!!'
@@ -430,26 +438,25 @@ magling 사용 목적은 다음과 같다.
        __evaluate = evaluate
    
            
-   class Chicken(Food): #자식 클래스
+   class Chicken(Food):               
        
-       def evaluate(self, taste, star): # 메서드 오버라이딩
+       def evaluate(self, taste, star):      
            return f'이 치킨은 {taste}!! 5점 만점에 {star}점!!'
        
-   pizza = Food('파인애플피자', 20000, 1) # 이 음식은 Terrible!!
-   bhc = Chicken('뿌링클', 18000, 1) # 이 음식은 Terrible!!
+   pizza = Food('파인애플피자', 20000, 1)      # 이 음식은 Terrible!!
+   bhc = Chicken('뿌링클', 18000, 1)          # 이 음식은 Terrible!!
    
-   print(pizza.evaluate('BAD')) # BAD!!
-   print(bhc.evaluate('GOOD', 5))  # 이 치킨은 GOOD!! 5점 만점에 5점!!
+   print(pizza.evaluate('BAD'))              # BAD!!
+   print(bhc.evaluate('GOOD', 5))            # 이 치킨은 GOOD!! 5점 만점에 5점!!
+   
    
    # dir()는 객체를 인자로 넣어주면 해당 객체가 갖고 있는 변수와 메서드를 나열한다. 
+   #_Food__evaluate로 이름을 mangling함으로서 evaluate와 이름이 충돌되지 않도록 한다. 
    print(dir(pizza))
    # ['_Food__evaluate', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'evaluate', 'name', 'price', 'rank']
    
    print(dir(bhc))
    # ['_Food__evaluate', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'evaluate', 'name', 'price', 'rank']
-   
-   
-   #_Food__evaluate로 이름을 mangling함으로서 evaluate와 이름이 충돌되지 않도록 한다. 
    ```
 
 <br>
@@ -479,7 +486,7 @@ magling 사용 목적은 다음과 같다.
 <br>
 
 ```python
-class Food: #부모클래스    
+class Food: 
     def __init__(self, name, price):
         self.__name = name
         self._price = price
@@ -489,23 +496,25 @@ class Food: #부모클래스
 pizza = Food('파인애플 피자', 20000)
 print(pizza._price)
 
-pizza._price = 100000000 # 20000 
-print(pizza._price) # 100000000 (__init__이 실행되지 않기때문에 오류가 발생하지 않는다..ㅠㅠ)
+pizza._price = 100000000      # 20000 
+print(pizza._price)           # 100000000 (__init__이 실행되지 않기때문에 오류가 발생하지 않는다..ㅠㅠ)
 ```
 
 ```python
-class Food: #부모클래스    
+class Food: 
     def __init__(self, name, price):
         self.__name = name
         self._price = price
         if price >= 100000:
             raise ValueError('너무 비쌉니다!')
-        
-    @property #getter 메서드 (속성의 값을 읽는다.)
+
+#getter 메서드 (속성의 값을 읽는다.)
+    @property                    
     def price(self):
         return self._price
     
-    @price.setter #setter 메서드 (해당 속성의 값을 지정한다.)
+ #setter 메서드 (해당 속성의 값을 지정한다.)
+    @price.setter              
     def price(self, new_price):
         if new_price >= 100000:
             raise ValueError('너무 비쌉니다!')
@@ -515,13 +524,12 @@ class Food: #부모클래스
 
 #값을 읽을 때마다 그냥 속성명으로 접근이 가능하다!!
 pizza = Food('파인애플 피자', 20000)
-print(pizza.price) # 20000
+print(pizza.price)               # 20000
 
 pizza.price = 10000
-print(pizza.price) # 10000
+print(pizza.price)              # 10000
 
-pizza.price = 100000000 #  
-print(pizza._price) # ValueError: 너무 비쌉니다!
+pizza.price = 100000000         # ValueError: 너무 비쌉니다!
 
 
 print(dir(pizza))
