--- a/algorithm/알고리즘 문제풀이 절차 및 학습방법.md
+++ b/algorithm/알고리즘 문제풀이 절차 및 학습방법.md
@@ -12,6 +12,8 @@
 
 ## 🧠 문제 해결 (구현)
 
+<img width="700" alt="image" src="https://user-images.githubusercontent.com/72687619/154786315-935c4c47-279b-4bf9-be64-1099a92ed45e.png">
+
 - **아이디어 구현**
   - 규칙성을 찾아서 문제를 해결할 아이디어를 얻는다.
   - 시각적으로 직접 그려보는 것이 많은 도움이 된다.
