--- a/algorithm/03_백트래킹.md
+++ b/algorithm/03_백트래킹.md
@@ -1,6 +1,6 @@
 # 백트래킹
 
-> ##### 알고리즘에서 중요한 문제 유형
+`알고리즘 문제 유형`
 
 - ##### 결정 문제(decision problem)
 
@@ -30,24 +30,44 @@
 
 <br>
 
-### 백트래킹이란
+## 2. 백트래킹이란
 
 >  해를 찾는 도중에 막히면(즉, 해가 아니면) 되돌아가서 다시 해를 찾는 기법이다. 
 >
-> 백트래킹 기법은 최적화 문제와 결정 문제를 해결할 수 있다. 
+>  백트래킹 기법은 최적화 문제와 결정 문제를 해결할 수 있다. 
 
-- 불필요한 경로를 조기에 차단해서 효율을 높인다. 
-- 즉, 어떤 노드의 유망성을 점검한 후에 유망(promising)하지 않다고 결정되면 그 노드의 부모로 되돌아가 다음 자식 노드로 간다.
-  - 어떤 노드를 방문하였을 때, 그 노드를 포함한 경로가 해답이 될 수 없으면 그 노드는 유망하지 않다고 하며, 반대로 해답의 가능성이 있으면 유망하다고 한다. 
-  - 유망하지 않는 노드가 포함되는 경로는 더 이상 고려하지 않는다.  
-- 절차
-  - 상태 공간 트리의 깊이 우선 검색을 실시한다.
-  - 각 노드가 유망한지를 점검한다.
-  - 만일 그 노드가 유망하지 않으면, 그 노드의 부모 노드로 돌아가서 검색을 계속한다. 
+**여러가지 선택지(옵션)들이 존재하는 상황에서 한가지를 선택한다. 선택이 이루어지면 새로운 선택지들의 집합이 생성된다.**
+
+**이런 선택을 반복하면서 최종 상태에 도달한다. (올바른 선택을 계속하면 목표 상태에 도달한다. )**
 
 <br>
 
-## 2. 부분 집합 생성
+### 1) 깊이 우선탐색과의 차이점
+
+- 깊이 우선 탐색이 모든 경로르 추적하는 데 비해 백트래킹은 불필요한 경로를 조기에 차단한다. 
+- 깊이 우선 탐색을 가하기에는 경우의 수가 너무 많다. N!가지의 경우의 수를 가진 문제에 대해 깊이 우선 탐색을 가하면 당연히 처리 불가능하다. 
+- 백트래킹 알고리즘을 적용하면 일반적으로 경우의 수가 줄어들지만, 이 역시 최악의 경우에는 여전히 지수함수 시간을 요하므로 처리가 불가능하다. 
+
+<br>
+
+### 2) 절차 
+
+- 상태 공간 트리의 깊이 우선 검색을 실시한다.
+- 각 노드가 유망한지를 점검한다.
+- 만일 그 노드가 유망하지 않으면, 그 노드의 부모 노드로 돌아가서(backtracking) 검색을 계속한다. 
+
+<br>
+
+### 3) 가지치기
+
+- 불필요한 경로를 조기에 차단해서 효율을 높인다.
+- 즉, 어떤 노드의 유망성을 점검한 후에 유망(promising)하지 않다고 결정되면 그 노드의 부모로 되돌아가 다음 자식 노드로 간다. ``
+  - 어떤 노드를 방문하였을 때, 그 노드를 포함한 경로가 해답이 될 수 없으면 그 노드는 유망하지 않다고 하며, 반대로 해답의 가능성이 있으면 유망하다고 한다. 
+  - 유망하지 않는 노드가 포함되는 경로는 더 이상 고려하지 않는다.  
+
+<br>
+
+## 3. 예시. 부분 집합 생성
 
 - 모든 부분집합을 생성하는 과정을 트리로 디자인
 
