--- a/algorithm/08_그래프_최단거리.md
+++ b/algorithm/08_그래프_최단거리.md
@@ -352,6 +352,8 @@ DIJKSTRA_ARRAY(1)
 
 `우선 순위 큐`
 
+> 주의 해야 할 것: 다익스트라의 우선순위 큐가 가장 먼저 꺼내야 할 것은 그 정점까지의 최단 거리가 가장 짧은 것! 가중치가 가장 작은 간선의 목적지가 아니다.
+
 ```python
 from heapq import heappop, heappush
 
